avoid source overflowing onto multiple lines

--- a/ArticleTemplates/assets/scss/outbrain.scss
+++ b/ArticleTemplates/assets/scss/outbrain.scss
@@ -17,6 +17,13 @@
 
 
 .OUTBRAIN {
+    .ob-dynamic-rec-link {
+        .ob-rec-source {
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
+    }
+
     @include mq($from: col2) {
         padding: base-px(0, 1);
     }
